@@ -1,2 +1,6 @@
 VOID:STRING,ENUM,STRING
 VOID:STRING,INT,STRING
+VOID:STRING,BOOLEAN
+BOOLEAN:POINTER
+VOID:POINTER,STRING
+VOID:POINTER,POINTER
